@@ -23,7 +23,37 @@ name|java
 operator|.
 name|io
 operator|.
+name|BufferedReader
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|InputStreamReader
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|PrintWriter
 import|;
 end_import
 
@@ -34,6 +64,16 @@ operator|.
 name|net
 operator|.
 name|InetAddress
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|Socket
 import|;
 end_import
 
@@ -950,11 +990,298 @@ name|address
 argument_list|)
 expr_stmt|;
 block|}
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|"\n  Quorum Server Statistics:"
+argument_list|)
+expr_stmt|;
+name|String
+index|[]
+name|servers
+init|=
+name|quorumServers
+operator|.
+name|split
+argument_list|(
+literal|","
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|String
+name|server
+range|:
+name|servers
+control|)
+block|{
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|"\n    - "
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|server
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|String
+index|[]
+name|stat
+init|=
+name|getServerStats
+argument_list|(
+name|server
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|String
+name|s
+range|:
+name|stat
+control|)
+block|{
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|"\n        "
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|s
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|"\n        ERROR: "
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 return|return
 name|sb
 operator|.
 name|toString
 argument_list|()
+return|;
+block|}
+comment|/**    * Gets the statistics from the given server. Uses a 1 minute timeout.    *     * @param server  The server to get the statistics from.    * @return The array of response strings.    * @throws IOException When the socket communication fails.    */
+specifier|public
+name|String
+index|[]
+name|getServerStats
+parameter_list|(
+name|String
+name|server
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|getServerStats
+argument_list|(
+name|server
+argument_list|,
+literal|1
+operator|*
+literal|60
+operator|*
+literal|1000
+argument_list|)
+return|;
+block|}
+comment|/**    * Gets the statistics from the given server.    *     * @param server  The server to get the statistics from.    * @param timeout  The socket timeout to use.    * @return The array of response strings.    * @throws IOException When the socket communication fails.    */
+specifier|public
+name|String
+index|[]
+name|getServerStats
+parameter_list|(
+name|String
+name|server
+parameter_list|,
+name|int
+name|timeout
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|String
+index|[]
+name|sp
+init|=
+name|server
+operator|.
+name|split
+argument_list|(
+literal|":"
+argument_list|)
+decl_stmt|;
+name|Socket
+name|socket
+init|=
+operator|new
+name|Socket
+argument_list|(
+name|sp
+index|[
+literal|0
+index|]
+argument_list|,
+name|sp
+operator|.
+name|length
+operator|>
+literal|1
+condition|?
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|sp
+index|[
+literal|1
+index|]
+argument_list|)
+else|:
+literal|2181
+argument_list|)
+decl_stmt|;
+name|socket
+operator|.
+name|setSoTimeout
+argument_list|(
+name|timeout
+argument_list|)
+expr_stmt|;
+name|PrintWriter
+name|out
+init|=
+operator|new
+name|PrintWriter
+argument_list|(
+name|socket
+operator|.
+name|getOutputStream
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|BufferedReader
+name|in
+init|=
+operator|new
+name|BufferedReader
+argument_list|(
+operator|new
+name|InputStreamReader
+argument_list|(
+name|socket
+operator|.
+name|getInputStream
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"stat"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|flush
+argument_list|()
+expr_stmt|;
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
+name|res
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+name|String
+name|line
+init|=
+name|in
+operator|.
+name|readLine
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|line
+operator|!=
+literal|null
+condition|)
+name|res
+operator|.
+name|add
+argument_list|(
+name|line
+argument_list|)
+expr_stmt|;
+else|else
+break|break;
+block|}
+name|socket
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+return|return
+name|res
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|String
+index|[
+name|res
+operator|.
+name|size
+argument_list|()
+index|]
+argument_list|)
 return|;
 block|}
 specifier|private
