@@ -207,6 +207,8 @@ Release 0.21.0 - Unreleased
                dfsadmin -safemode wait"
    HBASE-2009  [EC2] Support mapreduce
    HBASE-2012  [EC2] LZO support
+   HBASE-2011  Add zktop like output to HBase's master UI (Lars George via
+               Andrew Purtell)
 
   NEW FEATURES
    HBASE-1901  "General" partitioner for "hbase-48" bulk (behind the api, write
